--- a/templates/home.html
+++ b/templates/home.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>New Gens</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="head">New Gens</h1>
-        <img class="banner" src="static/images/banner.png" alt="New Gens">
-        <h2 class="sub_head">About New Gens</h2>
-        <p class="about">
+        <h1 class="text-center mt-2 mb-4">New Gens</h1>
+        <img class="img-fluid banner" src="static/images/banner.png" alt="New Gens">
+        <h2 class="text-center mt-2 mb-4">About New Gens</h2>
+        <p class="lead">
             Lorem ipsum dolor sit amet. Ex sunt magnam non facere nulla quo enim doloremque? Et laudantium voluptas est
             voluptatem nobis aut consequuntur quasi quo maiores omnis ea voluptates illum.
         </p>
-        <p class="about">
+        <p class="lead">
             Aut saepe doloribus ad quod fugit sed asperiores vitae quo reprehenderit exercitationem aut enim numquam id
             necessitatibus dolore est autem aliquam. Vel quia quia ea excepturi rerum est corporis tempore.
         </p>
-        <p class="about">
+        <p class="lead">
             Sed dolorem dolore aut galisum incidunt quo rerum animi ut ipsa obcaecati non numquam labore est omnis enim. Qui
             quia rerum qui vitae earum eum libero voluptatibus hic laborum quia. Non consequatur perferendis aut nihil voluptas
             sit accusantium optio At rerum atque. Ea sunt cupiditate aut natus voluptas hic minima consequuntur et quod minima
             At consectetur placeat 33 doloremque quia?
         </p>
-        <h2 class="sub_head">Open Positions</h2>
+        <h2 class="text-center mt-2 mb-4">Open Positions</h2>
         <p>TODO Show the jobs here</p>
-        <div class="contact_btn">
-            <button>Contact Us</button>
+        <div class="text-center">
+            <button class="btn btn-primary btn-lg">Contact Us</button>
         </div>
     </div>
-    <div>
+    <div class="text-center">
         <footer class="footer">
-            <p>Copyright 2023, New Gens</p>
+            <p class="mt-4">Copyright 2023, New Gens</p>
         </footer>
     </div>
 </body>
