--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,3 +3,24 @@
     height : 355px;
     object-fit : cover;
 }
+
+.post {
+    margin-bottom : 16px;
+    padding-bottom : 8px;
+    margin-left : 75px;
+    margin-right : 75px;
+}
+
+.post_title {
+    color : rgb(120,120,120);
+    margin-bottom : 4px;
+}
+
+.button {
+    margin-top : 50px;
+}
+
+.apply_btn {
+    margin-top : 15px;
+    padding-bottom: 10px;
+}
