--- a/templates/home.html
+++ b/templates/home.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>New Gens</title>
+    <title>{{company_name}}</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center mt-2 mb-4">New Gens</h1>
+        <h1 class="text-center mt-2 mb-4">{{company_name}}</h1>
         <img class="img-fluid banner" src="static/images/banner.png" alt="New Gens">
-        <h2 class="text-center mt-2 mb-4">About New Gens</h2>
+        <h2 class="text-center mt-2 mb-4">About {{company_name}}</h2>
         <p class="lead">
             Lorem ipsum dolor sit amet. Ex sunt magnam non facere nulla quo enim doloremque? Et laudantium voluptas est
             voluptatem nobis aut consequuntur quasi quo maiores omnis ea voluptates illum.
@@ -27,14 +27,18 @@
             At consectetur placeat 33 doloremque quia?
         </p>
         <h2 class="text-center mt-2 mb-4">Open Positions</h2>
-        <p>TODO Show the jobs here</p>
-        <div class="text-center">
+        <div>
+            {% for job in jobs %}
+                {% include 'jobitem.html' %}
+            {% endfor %}
+        </div>
+        <div class="text-center button">
             <button class="btn btn-primary btn-lg">Contact Us</button>
         </div>
     </div>
     <div class="text-center">
         <footer class="footer">
-            <p class="mt-4">Copyright 2023, New Gens</p>
+            <p class="mt-4">Copyright 2023, {{company_name}}</p>
         </footer>
     </div>
 </body>
