--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
     width : 100%;
     height : 355px;
     object-fit : cover;
+    margin-bottom : 16px;
 }
 
 .post {
@@ -23,4 +24,9 @@
 .apply_btn {
     margin-top : 15px;
     padding-bottom: 10px;
+}
+
+.people_img {
+    height : 380px;
+    border-radius : 4px;
 }
