--- a/templates/home.html
+++ b/templates/home.html
@@ -8,24 +8,31 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
+    {% include 'navbar.html' %}
+    <img class="img-fluid banner" src="static/images/banner.png" alt="New Gens">
     <div class="container">
-        <h1 class="text-center mt-2 mb-4">{{company_name}}</h1>
-        <img class="img-fluid banner" src="static/images/banner.png" alt="New Gens">
-        <h2 class="text-center mt-2 mb-4">About {{company_name}}</h2>
-        <p class="lead">
-            Lorem ipsum dolor sit amet. Ex sunt magnam non facere nulla quo enim doloremque? Et laudantium voluptas est
-            voluptatem nobis aut consequuntur quasi quo maiores omnis ea voluptates illum.
-        </p>
-        <p class="lead">
-            Aut saepe doloribus ad quod fugit sed asperiores vitae quo reprehenderit exercitationem aut enim numquam id
-            necessitatibus dolore est autem aliquam. Vel quia quia ea excepturi rerum est corporis tempore.
-        </p>
-        <p class="lead">
-            Sed dolorem dolore aut galisum incidunt quo rerum animi ut ipsa obcaecati non numquam labore est omnis enim. Qui
-            quia rerum qui vitae earum eum libero voluptatibus hic laborum quia. Non consequatur perferendis aut nihil voluptas
-            sit accusantium optio At rerum atque. Ea sunt cupiditate aut natus voluptas hic minima consequuntur et quod minima
-            At consectetur placeat 33 doloremque quia?
-        </p>
+        <h2 class="text-center mt-2 mb-4">{{company_name}} Careers</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <p class="lead">
+                    Lorem ipsum dolor sit amet. Ex sunt magnam non facere nulla quo enim doloremque? Et laudantium voluptas est
+                    voluptatem nobis aut consequuntur quasi quo maiores omnis ea voluptates illum.
+                </p>
+                <p class="lead">
+                    Aut saepe doloribus ad quod fugit sed asperiores vitae quo reprehenderit exercitationem aut enim numquam id
+                    necessitatibus dolore est autem aliquam. Vel quia quia ea excepturi rerum est corporis tempore.
+                </p>
+                <p class="lead">
+                    Sed dolorem dolore aut galisum incidunt quo rerum animi ut ipsa obcaecati non numquam labore est omnis enim. Qui
+                    quia rerum qui vitae earum eum libero voluptatibus hic laborum quia. Non consequatur perferendis aut nihil voluptas
+                    sit accusantium optio At rerum atque. Ea sunt cupiditate aut natus voluptas hic minima consequuntur et quod minima
+                    At consectetur placeat 33 doloremque quia?
+                </p>
+            </div>
+            <div class="d-none d-md-block col-md-6">
+                <img src="static/images/people.jpg" alt="people" class="people_img">
+            </div>
+        </div>
         <h2 class="text-center mt-2 mb-4">Open Positions</h2>
         <div>
             {% for job in jobs %}
@@ -33,13 +40,11 @@
             {% endfor %}
         </div>
         <div class="text-center button">
-            <button class="btn btn-primary btn-lg">Contact Us</button>
+            <a class="btn btn-primary btn-lg" href="mailto:rarijrashe@gmail.com?subject=Question%20about%20Job%20Opernings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20questions%3A%20%3Center%20question%20here%3E%0D%0A">
+                Contact Us
+            </a>
         </div>
     </div>
-    <div class="text-center">
-        <footer class="footer">
-            <p class="mt-4">Copyright 2023, {{company_name}}</p>
-        </footer>
-    </div>
+    {% include 'footer.html' %}
 </body>
 </html>
