--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,6 +13,9 @@
     {% endif %}
   </div>
   <div class="col-1">
-    <button type="button" class="btn btn-outline-primary apply_btn">Apply</button>
+    <a href="mailto:rarijrashe@gmail.com?subject=Application%20for%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20Resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20LinkedIn%20link%3A%20%3Clinkedin%20in%3E%0D%0A%0D%0A"
+       type="button" class="btn btn-outline-primary apply_btn">
+      Apply
+    </a>
   </div>
 </div>
